--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
                                 <div class="main-menu">
                                     <nav id="mobile-menu">
                                         <ul>
-                                            <li class="active"><a href="index.html">Home</a>
+                                            <li class="active"><a href="index.html">Главная</a>
                                                 <ul class="submenu">
                                                     <li><a href="index.html">Home One</a></li>
                                                     <li class="active"><a href="index-2.html">Home Two</a></li>
                                                     <li><a href="index-3.html">Home Three</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="about-us.html">Company</a></li>
-                                            <li><a href="tracking.html">Tracking</a></li>
-                                            <li><a href="#">Pages</a>
+                                            <li><a href="about-us.html">Компания</a></li>
+                                            <li><a href="tracking.html">Доставка</a></li>
+                                            <li><a href="#">Страницы</a>
                                                 <ul class="submenu">
-                                                    <li><a href="#">Services</a>
+                                                    <li><a href="#">Услуги</a>
                                                         <ul class="submenu">
                                                             <li><a href="service-air.html">Services Air</a></li>
                                                             <li><a href="service-Railway.html">Services Railway</a></li>
@@ -111,10 +111,10 @@
                                                             <li><a href="service-warehouse.html">Services warehouse</a></li>
                                                         </ul>
                                                     </li>
-                                                    <li><a href="pricing.html">Pricing Plan</a></li>
+                                                    <li><a href="pricing.html">Цены </a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">News &amp; Media</a>
+                                            <li><a href="#">Новости</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="blog-classic.html">Blog Classic</a></li>
@@ -122,7 +122,7 @@
                                                     <li><a href="blog-details.html">Blog Details</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="support.html">Support</a></li>
+                                            <li><a href="support.html">Поддержка</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -130,7 +130,7 @@
                                     <a href="#" data-toggle="modal" data-target="#search-modal"><i class="flaticon-magnifying-glass"></i></a>
                                 </div>
                                 <div class="header-btn">
-                                    <a href="#" class="btn" data-toggle="modal" data-target="#exampleModalLong"><img src="images/calculator-symbols.png" alt="icon">Get Fare Rate</a>
+                                    <a href="#" class="btn" data-toggle="modal" data-target="#exampleModalLong"><img src="images/calculator-symbols.png" alt="icon">Калькулятор</a>
                                 </div>
                             </div>
                         </div>
