скрыл поиск и калькулятор в паке

--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@
                                         </ul>
                                     </nav>
                                 </div>
+                                <!--
                                 <div class="header-search">
                                     <a href="#" data-toggle="modal" data-target="#search-modal"><i class="flaticon-magnifying-glass"></i></a>
                                 </div>
                                 <div class="header-btn">
                                     <a href="#" class="btn" data-toggle="modal" data-target="#exampleModalLong"><img src="images/calculator-symbols.png" alt="icon">Калькулятор</a>
-                                </div>
+                                </div>  -->
                             </div>
                         </div>
                         <div class="col-12">
