translated main section

--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@
                         <div class="col-lg-6">
                             <div class="testimonial-area">
                                 <div class="section-title white-title mb-55">
-                                    <h6>Happy Customer Quotes</h6>
-                                    <h2>Our Top Reviews</h2>
+                                    <h6>Цитаты довольных клиентов</h6>
+                                    <h2>Наши лучшие отзывы</h2>
                                 </div>
                                 <div class="testimonial-active">
                                     <div class="single-testimonial">
@@ -711,7 +711,7 @@
                                     </div>
                                     <div class="single-testimonial">
                                         <div class="testimonial-cat mb-30">
-                                            <h5>Air Freight</h5>
+                                            <h5>Авиаперевозки</h5>
                                             <div class="testimonial-rating">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -721,16 +721,16 @@
                                             </div>
                                         </div>
                                         <div class="testimonial-content mb-45">
-                                            <p>“ Express delivery is an innovative service is effective logistics solution for the delivery of small cargo. This
-                                            service is useful companied various effective logistics scala ”</p>
+                                            <p>“ Экспресс-доставка – инновационная услуга, эффективное логистическое решение для доставки небольших грузов. Этот
+                                            Сервис полезен в сочетании с различными эффективными логистическими масштабами ”</p>
                                         </div>
                                         <div class="testimonial-avatar">
                                             <div class="testi-avatar-img">
                                                 <img src="images/testi_avatar02.png" alt="img">
                                             </div>
                                             <div class="testi-avatar-info">
-                                                <h6>Lanu Dexander</h6>
-                                                <span>Founder Cargo</span>
+                                                <h6>Лану Дександер</h6>
+                                                <span>Основатель Карго</span>
                                             </div>
                                         </div>
                                     </div>
@@ -740,25 +740,25 @@
                         <div class="col-lg-6">
                             <div class="cta-area cta-pl">
                                 <div class="section-title white-title mb-60">
-                                    <h6>Clients Trust Us</h6>
-                                    <h2>Cargo Request Quote</h2>
+                                    <h6>Клиенты доверяют нам</h6>
+                                    <h2>Запрос на груз</h2>
                                 </div>
                                 <div class="cta-from">
                                     <form action="#">
                                         <div class="cta-form-col d-flex justify-content-between">
                                             <select class="custom-select">
                                                 <option selected="">Select Service</option>
-                                                <option>Air Freight</option>
-                                                <option>Shipping Cargo</option>
-                                                <option>Rail Cargo</option>
-                                                <option>Warehousing</option>
+                                                <option>Авиаперевозки</option>
+                                                <option>Доставка грузов</option>
+                                                <option>Железнодорожные перевозки</option>
+                                                <option>Складирование</option>
                                             </select>
                                             <input type="text" placeholder="Length cm">
                                             <input type="text" placeholder="Hight cm">
                                         </div>
                                         <div class="cta-form-col d-flex justify-content-between">
                                             <select class="custom-select">
-                                                <option selected="">From Country</option>
+                                                <option selected="">Откуда</option>
                                                 <option value="United States">United States</option>
                                                 <option value="United Kingdom">United Kingdom</option>
                                                 <option value="Afghanistan">Afghanistan</option>
@@ -789,7 +789,7 @@
                                                 <option value="Bolivia">Bolivia</option>
                                             </select>
                                             <select class="custom-select">
-                                                <option selected="">To Country</option>
+                                                <option selected="">Куда</option>
                                                 <option value="Iceland">Iceland</option>
                                                 <option value="India">India</option>
                                                 <option value="Indonesia">Indonesia</option>
@@ -815,7 +815,7 @@
                                         </div>
                                         <div class="cta-form-col d-flex justify-content-between">
                                             <select class="custom-select">
-                                                <option selected="">Weight kg</option>
+                                                <option selected="">Вес kg</option>
                                                 <option>100Kg</option>
                                                 <option>200Kg</option>
                                                 <option>300Kg</option>
@@ -826,34 +826,34 @@
                                             </select>
                                             <input class="cta-email" type="email" placeholder="Email ID">
                                         </div>
-                                        <h4 class="extra-services"><i class="fas fa-binoculars"></i>Extra Service</h4>
+                                        <h4 class="extra-services"><i class="fas fa-binoculars"></i>Дополнительная услуга</h4>
                                         <ul>
                                             <li>
                                                 <div class="custom-control custom-checkbox">
                                                     <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                                    <label class="custom-control-label" for="customCheck1">Air Freight</label>
+                                                    <label class="custom-control-label" for="customCheck1">Авиаперевозки</label>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="custom-control custom-checkbox">
                                                     <input type="checkbox" class="custom-control-input" id="customCheck2">
-                                                    <label class="custom-control-label" for="customCheck2">Shipping Cargo</label>
+                                                    <label class="custom-control-label" for="customCheck2">Доставка грузов</label>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="custom-control custom-checkbox">
                                                     <input type="checkbox" class="custom-control-input" id="customCheck3">
-                                                    <label class="custom-control-label" for="customCheck3">Rail Cargo</label>
+                                                    <label class="custom-control-label" for="customCheck3">Железнодорожные перевозки</label>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="custom-control custom-checkbox">
                                                     <input type="checkbox" class="custom-control-input" id="customCheck4">
-                                                    <label class="custom-control-label" for="customCheck4">Warehousing</label>
+                                                    <label class="custom-control-label" for="customCheck4">Складирование</label>
                                                 </div>
                                             </li>
                                         </ul>
-                                        <button class="btn">comparison</button>
+                                        <button class="btn">Посчитать</button>
                                     </form>
                                 </div>
                             </div>
@@ -869,9 +869,9 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-7 col-lg-10">
                             <div class="s-section-title text-center mb-60">
-                                <h2>We give complete control</h2>
-                                <p>Express delivery is an innovative service is effective logistics solution for the delivery of small cargo. This service
-                                is useful for companies various</p>
+                                <h2>Мы даем полный контроль/h2>
+                                <p>Экспресс-доставка – инновационная услуга, эффективное логистическое решение для доставки небольших грузов. Эта услуга
+                                полезен для компаний различных</p>
                             </div>
                         </div>
                     </div>
@@ -884,8 +884,8 @@
                                     <img src="images/control_img01.jpg" alt="img">
                                 </div>
                                 <div class="control-overlay-content">
-                                    <h4><a href="#">Cargo Truck</a></h4>
-                                    <span>Delivery Anything</span>
+                                    <h4><a href="#">Грузовики</a></h4>
+                                    <span>Доставляет что угодно</span>
                                 </div>
                             </div>
                         </div>
@@ -895,8 +895,8 @@
                                     <img src="images/control_img02.jpg" alt="img">
                                 </div>
                                 <div class="control-overlay-content">
-                                    <h4><a href="#">Cargo shipping</a></h4>
-                                    <span>Delivery Anything</span>
+                                    <h4><a href="#">Грузоперевозки</a></h4>
+                                    <span>Доставляет что угодно</span>
                                 </div>
                             </div>
                         </div>
@@ -906,8 +906,8 @@
                                     <img src="images/control_img03.jpg" alt="img">
                                 </div>
                                 <div class="control-overlay-content">
-                                    <h4><a href="#">Cargo Truck</a></h4>
-                                    <span>Delivery Anything</span>
+                                    <h4><a href="#">Грузовики</a></h4>
+                                    <span>Доставляет что угодно</span>
                                 </div>
                             </div>
                         </div>
@@ -917,8 +917,8 @@
                                     <img src="images/control_img02.jpg" alt="img">
                                 </div>
                                 <div class="control-overlay-content">
-                                    <h4><a href="#">Cargo shipping</a></h4>
-                                    <span>Delivery Anything</span>
+                                    <h4><a href="#">Контейнеровозы</a></h4>
+                                    <span>Доставляет что угодно</span>
                                 </div>
                             </div>
                         </div>
@@ -928,8 +928,8 @@
                                     <img src="images/control_img03.jpg" alt="img">
                                 </div>
                                 <div class="control-overlay-content">
-                                    <h4><a href="#">Cargo Truck</a></h4>
-                                    <span>Delivery Anything</span>
+                                    <h4><a href="#">Грузовики</a></h4>
+                                    <span>Доставляет что угодно</span>
                                 </div>
                             </div>
                         </div>
@@ -983,18 +983,18 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="newsletter-wrap">
-                                <div class="row">
+                                <div class="row">000000000000
                                     <div class="col-lg-5">
                                         <div class="newsletter-content">
-                                            <h4>Newsletter Sign Up</h4>
-                                            <span>Notifications our best deals...</span>
+                                            <h4>Подписаться на рассылку новостей</h4>
+                                            <span>Уведомления о наших лучших предложениях...</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-7">
                                         <div class="newsletter-form">
                                             <form action="#">
                                                 <input type="email" placeholder="Enter your email...">
-                                                <button class="btn">subscribe</button>
+                                                <button class="btn">Подписаться</button>
                                             </form>
                                         </div>
                                     </div>
