--- a/index.html
+++ b/index.html
@@ -36,23 +36,29 @@
                         <span data-text-preloader="T" class="letters-loading">
                             T
                         </span>
-                        <span data-text-preloader="A" class="letters-loading">
-                            A
-                        </span>
-                        <span data-text-preloader="R" class="letters-loading">
-                            R
-                        </span>
-                        <span data-text-preloader="T" class="letters-loading">
-                            T
-                        </span>
                         <span data-text-preloader="E" class="letters-loading">
                             E
+                        </span>
+                        <span data-text-preloader="L" class="letters-loading">
+                            L
                         </span>
                         <span data-text-preloader="S" class="letters-loading">
                             S
                         </span>
-                        <span data-text-preloader="K" class="letters-loading">
-                            K
+                        <span data-text-preloader="T" class="letters-loading">
+                            T
+                        </span>
+                        <span data-text-preloader="R" class="letters-loading">
+                            R
+                        </span>
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
+                        </span>
+                        <span data-text-preloader="N" class="letters-loading">
+                            N
+                        </span>
+                        <span data-text-preloader="S" class="letters-loading">
+                            S
                         </span>
                     </div>
                 </div>
