--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                                                     <li><a href="index-3.html">Home Three</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="about-us.html">Компания</a></li>
-                                            <li><a href="tracking.html">Доставка</a></li>
+                                            <li><a href="#category-section">Компания</a></li>
+                                            <li><a href="#services-area-section">Доставка</a></li>
                                             <li><a href="#">Страницы</a>
                                                 <ul class="submenu">
                                                     <li><a href="#">Услуги</a>
@@ -423,14 +423,14 @@
             <!-- category-area-end -->
 
             <!-- services-area -->
-            <section class="services-area delivery-bg pt-110 pb-90">
+            <section id ="services-area-section" class="services-area delivery-bg pt-110 pb-90">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-xl-7 col-lg-10">
                             <div class="s-section-title text-center mb-60">
-                                <h2>ДОСТАВКА ГРУЗОВ</h2>
-                                <p>Экспресс-доставка – инновационная услуга, эффективное логистическое решение для доставки небольших грузов. Эта услуга
-                                полезен для компаний различных.</p>
+                                <h2>грузоперевозки и таможенное оформление по всему миру</h2>
+                                <p>Компания ООО «Stels-Trans» предоставляет услуги в сфере внешнеэкономической деятельности. 
+                                    Мы являемся официальным, лицензированным таможенным представителем , и готовы предложить Вам весь спектр услуг по данному направлению под «ключ».</p>
                             </div>
                         </div>
                     </div>
