--- a/index.html
+++ b/index.html
@@ -445,9 +445,13 @@
                                         <div class="services-icon">
                                             <i class="flaticon-shipping-and-delivery"></i>
                                         </div>
-                                        <h3><a href="#">Больше контроля от начало до конца доставки</a></h3>
-                                        <span>Служба доставки</span>
-                                        <p>Экспресс-доставка — инновационная услуга, эффективное логистическое решение для доставки небольших грузов..</p>
+                                        <h3><a href="#">Таможенное оформление</a></h3>
+                                        <span>От 10 000 тр.</span>
+                                        <p>Эпредварительное консультирование;
+                                            анализ документов;
+                                            подготовка и подача декларации на товары (далее — ДТ) в таможенный орган;
+                                            согласование в таможенном органе;
+                                            выпуск ДТ.</p>
                                     </div>
                                 </div>
                             </div>
@@ -460,9 +464,12 @@
                                         <div class="services-icon">
                                             <i class="flaticon-shipping"></i>
                                         </div>
-                                        <h3><a href="#">Расширяйтесь с помощью электронной коммерции</a></h3>
-                                        <span>Служба доставки</span>
-                                        <p>Экспресс-доставка — инновационная услуга, эффективное логистическое решение для доставки небольших грузов..</p>
+                                        <h3><a href="#">Экспедирование</a></h3>
+                                        <span>От 3000 тр.</span>
+                                        <p>оформление документов при приёмке груза на хранение;
+                                            получение релизов в морских линиях;
+                                            получение разрешений на погрузку груза в порту;
+                                            подготовка сопроводительных</p>
                                     </div>
                                 </div>
                             </div>
@@ -475,9 +482,9 @@
                                         <div class="services-icon">
                                             <i class="flaticon-location"></i>
                                         </div>
-                                        <h3><a href="#">Доставка больше, чем где бы то ни было</a></h3>
-                                        <span>Служба доставки</span>
-                                        <p>Экспресс-доставка — инновационная услуга, эффективное логистическое решение для доставки небольших грузов..</p>
+                                        <h3><a href="#">Вывоз груза с терминала</a></h3>
+                                        <span>От 2000 тр.</span>
+                                        <p>Данная услуга рассчитывается индивидуально и зависит от веса, объема и адреса доставки.</p>
                                     </div>
                                 </div>
                             </div>
