add ifo in international-services section

--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="s-section-title mb-30">
-                                    <h2>Международные грузоперевозки</h2>
-                                    <h6>Экспресс-доставка — инновационная услуга</h6>
+                                    <h2>Мы доставляем любые виды грузов:</h2>
+                                    <h6>Группа компаний Stels-Trans осуществляет международные перевозки грузов из разных стран мира.</h6>
                                 </div>
                                 <div class="int-services-content">
-                                    <p>Экспресс-доставка – инновационная услуга, эффективное логистическое решение для доставки небольших грузов. Эта услуга
-                                    полезен для компаний различного эффективного логистического масштаба.</p>
-                                    <a href="#" class="btn">Сравнение</a>
+                                    <p>Комплексный подход:
+                                        Таможенное оформление любой категории товаров (все группы товаров согласно ЕТН ВЭД ЕАЭС) включая акцизные товары и доставку любым видом транспорта.</p>
+                                  <!--<a href="#" class="btn">Сравнение</a>-->  
                                 </div>
                             </div>
                         </div>
