add infi in delivery-services

--- a/index.html
+++ b/index.html
@@ -551,9 +551,8 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-7 col-lg-10">
                                 <div class="s-section-title text-center mb-60">
-                                    <h2>Служба доставки грузов</h2>
-                                    <p>Экспресс-доставка — инновационная услуга, эффективное логистическое решение для доставки небольших грузов.
-                                        груз. Данная услуга полезна для различных компаний.</p>
+                                    <h2>Почему клиенты выбирают нас?</h2>
+                                    <p>Вся наша работа строится, прежде всего, на удовлетворении запросов клиента, на учет и выполнение их пожеланий.</p>
                                 </div>
                             </div>
                         </div>
@@ -564,8 +563,8 @@
                                         <img src="images/ds_icon01.png" alt="icon">
                                     </div>
                                     <div class="ds-content text-center text-sm-left text-md-right">
-                                        <h5>Доставка грузов</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <h5>Cобственный автопарк</h5>
+                                        <p>У нашей компании есть собственный автопарк. Тем самым мы предлагаем минимальную стоимость по доставке грузов.</p>
                                     </div>
                                 </div>
                                 <div class="single-delivery-services mb-70 pr-75">
@@ -573,8 +572,8 @@
                                         <img src="images/ds_icon02.png" alt="icon">
                                     </div>
                                     <div class="ds-content text-center text-sm-left text-md-right">
-                                        <h5>Довольные клиенты</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <h5>Большой и богатый опыт в сфере ВЭД</h5>
+                                        <p>Более 10 лет безупречной деятельности компании. Все специалисты компании профессионалs своего дела.</p>
                                     </div>
                                 </div>
                                 <div class="single-delivery-services mb-70 pr-75">
@@ -582,8 +581,8 @@
                                         <img src="images/ds_icon03.png" alt="icon">
                                     </div>
                                     <div class="ds-content text-center text-sm-left text-md-right">
-                                        <h5>от двекри до двери</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <h5>Индивидуальный подход</h5>
+                                        <p>Приоритетным направлением нашей компании является индивидуальный подход к каждому клиенту.</p>
                                     </div>
                                 </div>
                             </div>
@@ -599,7 +598,7 @@
                                     </div>
                                     <div class="ds-content">
                                         <h5>Международная доставка</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <p>Cроки выпуска декларации на товары — от 40 минут. Рассчитаем оптимальный маршрут перевозки</p>
                                     </div>
                                 </div>
                                 <div class="single-delivery-services mb-70 pl-75">
@@ -607,8 +606,8 @@
                                         <img src="images/ds_icon05.png" alt="icon">
                                     </div>
                                     <div class="ds-content">
-                                        <h5>Габаритные грузы</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <h5>Cобственный склад В Европе</h5>
+                                        <p>Мы готовы предложить услуги по нанесению маркировки хранению и консолидации грузов в Европе </p>
                                     </div>
                                 </div>
                                 <div class="single-delivery-services mb-70 pl-75">
@@ -617,7 +616,7 @@
                                     </div>
                                     <div class="ds-content">
                                         <h5>страхование груза</h5>
-                                        <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                        <p>Наша компания предоставляет нашим клиентам весь комплекс услуг в сфере страхования «ключ».</p>
                                     </div>
                                 </div>
                             </div>
