add infi in fact area

--- a/index.html
+++ b/index.html
@@ -636,9 +636,9 @@
                                     <i class="flaticon-package"></i>
                                 </div>
                                 <div class="fact-content">
-                                    <h4><span class="count">3,560</span> km</h4>
-                                    <h6>Посылок доставлена</h6>
-                                    <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                    <h4><span class="count">3,560</span> k</h4>
+                                    <h6>Грузов доставлена</h6>
+                                    <p>Мы заботимся о том, чтобы каждый наш клиент остался доволен.</p>
                                 </div>
                             </div>
                         </div>
@@ -648,9 +648,9 @@
                                     <i class="flaticon-placeholder"></i>
                                 </div>
                                 <div class="fact-content">
-                                    <h4><span class="count">195</span></h4>
+                                    <h4><span class="count">195</span>k</h4>
                                     <h6>Охваченные страны</h6>
-                                    <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                    <p>Вас интересует доставка груза из Европы и Азии, тогда Вы правильно сделали свой выбор.</p>
                                 </div>
                             </div>
                         </div>
@@ -662,7 +662,7 @@
                                 <div class="fact-content">
                                     <h4><span class="count">456</span> k</h4>
                                     <h6>Счастливых клиентов</h6>
-                                    <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                    <p>90% клиентов обращаются к нам по рекомендациям</p>
                                 </div>
                             </div>
                         </div>
@@ -674,7 +674,7 @@
                                 <div class="fact-content">
                                     <h4><span class="count">10</span> лет</h4>
                                     <h6>На рынке</h6>
-                                    <p>Экспресс-доставка, инновационная услуга логистической доставки</p>
+                                    <p>Более 10 лет безупречной деятельности компании</p>
                                 </div>
                             </div>
                         </div>
