--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-7 col-lg-10">
                             <div class="s-section-title text-center mb-60">
-                                <h2>Мы даем полный контроль/h2>
+                                <h2>Мы даем полный контроль</h2>
                                 <p>Экспресс-доставка – инновационная услуга, эффективное логистическое решение для доставки небольших грузов. Эта услуга
                                 полезен для компаний различных</p>
                             </div>
@@ -949,6 +949,100 @@
                 </div>
             </section>
             <!-- control-area-end -->
+                   <!-- support-area -->
+            <div class="support-area support-bg pt-110 pb-120">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-7 col-lg-10">
+                            <div class="s-section-title text-center mb-60">
+                                <h2>Get In Touch</h2>
+                                <p>Express delivery is an innovative service is effective logistics solution for the delivery of small
+                                    cargo. This service is useful for companies various.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10">
+                            <div class="support-form text-center">
+                                <form action="#">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <input type="text" placeholder="First Name *">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="text" placeholder="Last Name *">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="email" placeholder="Your E-mail *">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="email" placeholder="Website">
+                                        </div>
+                                    </div>
+                                    <textarea name="message" id="message" placeholder="Message"></textarea>
+                                    <button class="btn red-btn">Submit Now</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- support-area-end -->
+
+            <!-- contact-area -->
+            <section class="contact-area primary-bg pt-70 pb-15">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="single-contact-box mb-50">
+                                <div class="contact-icon mb-30">
+                                    <img src="img/icon/contact_box_icon01.png" alt="img">
+                                </div>
+                                <div class="contact-content">
+                                    <h5>Find Location</h5>
+                                    <span>99 NY Address street, Bronk Center Brooklyn</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="single-contact-box mb-50">
+                                <div class="contact-icon mb-30">
+                                    <img src="img/icon/contact_box_icon02.png" alt="img">
+                                </div>
+                                <div class="contact-content">
+                                    <h5>Phone Number</h5>
+                                    <span>+1 212-226-3126</span>
+                                    <span>+1 212-226-3126</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="single-contact-box mb-50">
+                                <div class="contact-icon mb-30">
+                                    <img src="img/icon/contact_box_icon03.png" alt="img">
+                                </div>
+                                <div class="contact-content">
+                                    <h5>email informing</h5>
+                                    <span>info@<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="04777065767061776f446369656d682a676b69">[email&#160;protected]</a></span>
+                                    <span>info@startesk@com</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="single-contact-box mb-50">
+                                <div class="contact-icon mb-30">
+                                    <img src="img/icon/contact_box_icon04.png" alt="img">
+                                </div>
+                                <div class="contact-content">
+                                    <h5>email informing</h5>
+                                    <span>99 NY Address street, Bronk Center Brooklyn</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- contact-area-end -->
 
             <!-- brand-area -->
             <div class="brand-area gray-bg pt-85 pb-85">
