hide control area

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
             </section>
             <!-- section-area-end -->
 
-            <!-- control-area -->
+            <!-- control-area 
             <section class="control-area pt-110 pb-120">
                 <div class="container">
                     <div class="row justify-content-center">
@@ -948,7 +948,7 @@
                     </div>
                 </div>
             </section>
-            <!-- control-area-end -->
+             control-area-end -->
                    <!-- support-area -->
             <div class="support-area support-bg pt-110 pb-120">
                 <div class="container">
