--- a/index.html
+++ b/index.html
@@ -955,9 +955,9 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-7 col-lg-10">
                             <div class="s-section-title text-center mb-60">
-                                <h2>Get In Touch</h2>
-                                <p>Express delivery is an innovative service is effective logistics solution for the delivery of small
-                                    cargo. This service is useful for companies various.</p>
+                                <h2>Свяжитесь с нами </h2>
+                                <p>Хотите получить консультацию?
+                                    Оставьте заявку, и мы свяжемся с вами</p>
                             </div>
                         </div>
                     </div>
@@ -967,20 +967,20 @@
                                 <form action="#">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <input type="text" placeholder="First Name *">
+                                            <input type="text" placeholder="ИМЯ *">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="text" placeholder="Last Name *">
+                                            <input type="text" placeholder="Фамилия *">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="email" placeholder="Your E-mail *">
+                                            <input type="email" placeholder="Ваш E-mail *">
                                         </div>
                                         <div class="col-md-6">
-                                            <input type="email" placeholder="Website">
+                                            <input type="tel" placeholder="Ваш номер телефона *">
                                         </div>
                                     </div>
-                                    <textarea name="message" id="message" placeholder="Message"></textarea>
-                                    <button class="btn red-btn">Submit Now</button>
+                                    <textarea name="message" id="message" placeholder="Сообщения"></textarea>
+                                    <button class="btn red-btn">Отправить</button>
                                 </form>
                             </div>
                         </div>
