--- a/index.html
+++ b/index.html
@@ -979,8 +979,8 @@
                                             <input type="tel" placeholder="Ваш номер телефона *">
                                         </div>
                                     </div>
-                                    <textarea name="message" id="message" placeholder="Message"></textarea>
-                                    <button class="btn red-btn">Submit Now</button>
+                                    <textarea name="message" id="message" placeholder="Сообщения"></textarea>
+                                    <button class="btn red-btn">Отправить</button>
                                 </form>
                             </div>
                         </div>
