add adress information

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                                     <img src="images/icon/contact_box_icon01.png" alt="img">
                                 </div>
                                 <div class="contact-content">
-                                    <h5>Find Location</h5>
+                                    <h5>Наш адрес</h5>
                                     <span>99 NY Address street, Bronk Center Brooklyn</span>
                                 </div>
                             </div>
@@ -1010,7 +1010,7 @@
                                     <img src="images/icon/contact_box_icon02.png" alt="img">
                                 </div>
                                 <div class="contact-content">
-                                    <h5>Phone Number</h5>
+                                    <h5>Наши номера</h5>
                                     <span>+1 212-226-3126</span>
                                     <span>+1 212-226-3126</span>
                                 </div>
@@ -1022,7 +1022,7 @@
                                     <img src="images/icon/contact_box_icon03.png" alt="img">
                                 </div>
                                 <div class="contact-content">
-                                    <h5>email informing</h5>
+                                    <h5>email </h5>
                                     <span>info@<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="04777065767061776f446369656d682a676b69">[email&#160;protected]</a></span>
                                     <span>info@startesk@com</span>
                                 </div>
@@ -1034,7 +1034,7 @@
                                     <img src="images/icon/contact_box_icon04.png" alt="img">
                                 </div>
                                 <div class="contact-content">
-                                    <h5>email informing</h5>
+                                    <h5>Почтовый адрес</h5>
                                     <span>99 NY Address street, Bronk Center Brooklyn</span>
                                 </div>
                             </div>
