--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="newsletter-wrap">
-                                <div class="row">000000000000
+                                <div class="row">
                                     <div class="col-lg-5">
                                         <div class="newsletter-content">
                                             <h4>Подписаться на рассылку новостей</h4>
@@ -1099,7 +1099,7 @@
                                     <div class="col-lg-7">
                                         <div class="newsletter-form">
                                             <form action="#">
-                                                <input type="email" placeholder="Enter your email...">
+                                                <input type="email" placeholder="Ваш email...">
                                                 <button class="btn">Подписаться</button>
                                             </form>
                                         </div>
