--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
 
         <!-- footer -->
         <footer>
-           <!-- <div class="footer-wrap pt-190 pb-40" data-background="img/bg/footer_bg.jpg">
+           <div class="footer-wrap pt-190 pb-40" data-background="img/bg/footer_bg.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-6">
@@ -1139,7 +1139,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
+                       <!--  <div class="col-xl-3 col-lg-4 col-md-6">
                             <div class="footer-widget mb-50">
                                 <div class="fw-title mb-30">
                                     <h5>RECENT POSTS</h5>
